# cpr

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  stress_test_template.cpp
.cargo/: config.toml
src/: approx.rs  draw.rs  main.rs  util.rs
src/approx/: client_wrapper.rs  data.rs  mtime.rs  notion.rs  remote.rs  test_info.rs  test_log.rs
src/draw/: draw_graph.rs  draw_matrix.rs  draw_points.rs  draw_tree.rs
templates/: Cargo.toml  cpp_compile_flags.txt  stress_test_check_template.cpp  stress_test_template.cpp
templates/start/: cpp.txt  kt.txt  rs.txt
